--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "big.js": "^6.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
     "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -54,6 +54,7 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
+    "prop-types": "^15.8.1",
     "tailwindcss": "^3.0.8"
   }
 }
