--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "math-magicians",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --base=/scientech-cost-calculator/",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test --watchAll --testMatch **/src/**/*.test.js",
